# md_to_pdf

./: .gitignore  Cargo.toml  README.md  build_release.sh
config/: cli.yaml
example_template/: document.html.hbs  example.sh  style.css
src/: common.rs  compose_pdf.rs  custom_error.rs  frontmatter.rs  main.rs  process_markdown.rs
styles/: pretty_pdf.css
template/: document.html.hbs
