[package]
name = "md_to_pdf"
version = "0.1.0"
authors = ["GeorgyFirsov <gfirsov007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10"
tracing = "0.1.26"
tracing-subscriber = "0.2"
wkhtmltopdf = "0.4.0"
phf = { version = "0.8.0", features = ["macros"] }
clap = { version = "3.0.0-beta.2", features = ["yaml"] }