[package]
name = "md_to_pdf"
version = "0.2.0"
authors = ["GeorgyFirsov <gfirsov007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
comrak = "0.10"
base64 = "0.13.0"
tracing = "0.1.26"
wkhtmltopdf = "0.4.0"
tracing-subscriber = "0.2"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }