[package]
name = "md_to_pdf"
version = "0.2.0"
authors = ["GeorgyFirsov <gfirsov007@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
comrak = "0.24.1"
base64 = "0.22.1"
tracing = "0.1.40"
wkhtmltopdf = "0.4.0"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.4" }

color-backtrace = { version = "0.6.1", features = ["regex"] }
url = "2.5.0"
infer = "0.15.0"
handlebars = "5.1.2"
serde = { version = "1.0.202", "features" = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.117"
